<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">mobileKKM</string>
    <string name="app_description">Unofficial Android app for the mobile KKM ticketing webapp.</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Log in to mobileKKM</string>
    <string name="kkm_title" translatable="false">Krakowska Karta Miejska</string>
    <string name="kk_title" translatable="false">Karta Krakowska</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Log in</string>
    <string name="action_login_using_kk">Log in using Karta Krakowska</string>
    <string name="action_register">Don\'t have an account? Register now.</string>
    <string name="error_field_required">Field required</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_no_network">No Internet connection</string>
    <string name="error_account">Missing user account on the device</string>
    <string name="error_fingerprint">An error occurred while identifying the device</string>
    <string name="error_unknown">Unknown error</string>
    <string name="action_help">Help</string>

    <!-- Strings related to registration -->
    <string name="title_activity_registration">Register a new account</string>
    <string name="registration_complete">Please check your mail inbox to complete account registration</string>
    <string name="snackbar_open">Open</string>

    <!-- Strings related to main -->
    <string name="title_activity_main">Main page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">%s %s</string>
    <string name="nav_header_subtitle" translatable="false">%s</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="snackbar_retry">Try again</string>
    <string name="action_refresh">Refresh</string>

    <!-- Navbar navigation drawer -->
    <string name="nav_tickets">Active tickets</string>
    <string name="nav_control">Ticket control</string>
    <string name="nav_purchase">Buy ticket</string>
    <string name="nav_account">My account</string>
    <string name="nav_citizen_status">Cracow Card status</string>
    <string name="nav_pricing_list">Pricing list</string>
    <string name="nav_backup">Backups</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log out</string>

    <!-- Backup and restore -->
    <string name="title_activity_backup">Backups</string>
    <string name="backup_howto_title">How does it work?</string>
    <string name="backup_howto_description">Each ticket paired with the device is assigned to the so-called device identifier, which mobileKKM creates on the basis of the Android identifier from the system of the device</string>
    <string name="backup_category_import">Restore</string>
    <string name="backup_category_export">Backup</string>
    <string name="backup_import_title">Restore from file</string>
    <string name="backup_import_desc">If you have a previous backup, mobileKKM can import it from a JSON file</string>
    <string name="backup_restore_title">Restore from browser</string>
    <string name="backup_restore_desc">Select this option if you have a device identifier from the browser on which you have previously paired a ticket</string>
    <string name="backup_export_title">Backup to file</string>
    <string name="backup_export_desc">Export the device identifier to a JSON file</string>
    <string name="backup_permissions_not_granted">Storage permissions not granted</string>
    <string name="backup_restore_fingerprint">Enter device identifier</string>
    <string name="backup_invalid_fingerprint">The device identifier entered is incorrect</string>
    <string name="backup_json_error">An error occurred with the backup</string>
    <string name="backup_import_success">Import successful</string>
    <string name="backup_wrong_account">Incorrect backup selected</string>
    <string name="backup_export_success">Export successful</string>
    <string name="backup_export_failed">Export failed</string>

    <!-- Strings related to settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_group_general">General</string>
    <string name="pref_group_notifications">Notifications</string>
    <string name="pref_group_about">About</string>
    <string name="pref_disclaimer_title">Do not show the message again</string>
    <string name="pref_disclaimer_description">Turn off to display the message after the first start of the application again</string>
    <string name="pref_enable_notifications">Enable notifications</string>
    <string name="pref_expiration">Inform about ticket expiration</string>
    <string name="pref_expiration_summary">%s before</string>
    <string name="pref_notification_ringtone">Sound</string>
    <string name="pref_notification_vibrate">Vibrate</string>
    <string name="pref_notification_settings">Notification settings</string>
    <string name="pref_notification_settings_summary">Select sounds and other system settings</string>
    <string name="pref_about_title">Open-source licenses</string>
    <string name="pref_about_description">Get to know the contributors and libraries used</string>
    <string name="pref_version_title">mobileKKM app</string>
    <string name="pref_version_description">version %s-%s.%s\n%s</string>
    <string name="pref_restart">Restart app</string>

    <!-- Expiration values -->
    <string name="expiration_oneday">1 day</string>
    <string name="expiration_threedays">3 days</string>
    <string name="expiration_fivedays">5 days</string>
    <string name="expiration_oneweek">1 week</string>
    <string name="expiration_twoweeks">2 weeks</string>
    <string name="expiration_onemonth">1 month</string>

    <!-- Notification -->
    <string name="notification_channel_expiry">Ticket expiration</string>
    <string name="notification_channel_expiry_desc">Information about upcoming ticket expiration</string>
    <string name="expiration_notification_title">Your ticket will soon expire</string>
    <string name="expiration_notification_msg">The ticket is valid until the end of %s</string>

    <!-- Attribouter screen -->
    <string name="about_contact_us">Contact us</string>
    <string name="about_facebook_like">Like us</string>
    <string name="title_attribouter_about">About app</string>
    <string name="title_attribouter_licenses">Open Source Licenses</string>
    <string name="title_attribouter_email">Email</string>
    <string name="title_attribouter_website">Website</string>
    <string name="title_attribouter_github" translatable="false">GitHub</string>
    <string name="title_attribouter_rate">Rate</string>
    <string name="title_attribouter_version">Version %1$s</string>
    <string name="title_attribouter_contributors">Contributors</string>
    <string name="title_attribouter_license">License</string>
    <string name="title_attribouter_license_permissions">Permissions</string>
    <string name="title_attribouter_license_conditions">Conditions</string>
    <string name="title_attribouter_license_limitations">Limitations</string>
    <string name="title_attribouter_more_info">More Info</string>
    <string name="about_role_lead">Lead Developer</string>
    <string name="about_role_proofreader">Translation Proofreader</string>
    <string name="about_role_ui_designer">UI Designer</string>
    <string name="about_role_icon_designer">Icon Designer</string>
    <string name="about_role_copyright">All Rights Reserved</string>
    <string name="about_bio_divadsn">20 years old, turns caffeine and pizza into code. Also previously known as Codebucket.</string>
    <string name="about_bio_imintie">Second half of David Sn.</string>
    <string name="about_bio_lumiqcreative">It’s just got harder to build a bad product.</string>

    <!-- Strings related to crash report -->
    <string name="title_activity_crash">Report bug</string>
    <string name="crash_apologise">I\'m sorry, but an error occurred!</string>
    <string name="crash_cancel">Cancel</string>
    <string name="crash_send_report">Send report</string>
    <string name="action_share">Share</string>

    <!-- Strings related to dialogs -->
    <string name="dialog_logout_title">Logging out</string>
    <string name="dialog_logout_warning">Do you want to log out? You will not lose the tickets paired with this device.</string>
    <string name="dialog_facebook_title">Facebook</string>
    <string name="dialog_facebook_body">Like our app page on Facebook to receive the latest news, keep up to date with features and share your opinions!</string>
    <string name="dialog_payment_reminder_title">Payment reminder</string>
    <string name="dialog_payment_reminder_body">It seems like you have an unfinished payment for the last ticket.\n\nDo you want to try again?</string>
    <string name="dialog_dont_show_again">Don\'t show again</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_help">Help</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!-- Disclaimer popup -->
    <string name="disclaimer_title">Attention please!</string>
    <string name="disclaimer_body">mobileKKM is a <b>independently from KKM and MPK Kraków</b> developed \"open-source\" app with source code available on GitHub. The app is <b>unofficial</b>, I don\'t take any responsibility in case something went wrong with your account when using the app.\n\nAll in-app displayed prices are official ticket prices, <b>I cannot offer discounted</b> unless MPK Kraków offers them.</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="privacy_policy_body">In order to comply with the European General Data Protection Regulation (GDPR), we would like to draw your attention to our privacy policy. Please read it carefully.\n\nYou must accept it in order to send us bug reports.</string>
    <string name="read_privacy_policy">Read privacy policy</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <!-- Other strings -->
    <string name="progress_login">Logging in…</string>
    <string name="no_browser_activity">No browser app found</string>
    <string name="no_email_activity">No email app found</string>
    <string name="press_back_again">Press \"back\" again to exit</string>
    <string name="not_implemented">Feature not yet available!</string>
    <string name="login_using_kk_title">No support for Karta Krakowska</string>
    <string name="login_using_kk_body">Karta Krakowska has a separate ticket system with its own official app offered by MPK Kraków. We are unable to provide any functionality or support for these accounts.\n\nPlease uninstall our app and install the official app from the Google Play Store.</string>
    <string name="session_expired">Your session has expired, please log in</string>
    <string name="state_loading">Restarting app…</string>
    <string name="tickets_provider_name">Saved tickets</string>
    <string name="intent_chooser_file">Select file</string>
    <string name="intent_chooser_email">Send email</string>
    <string name="intent_chooser_share">Share via</string>
    <string name="no_payment">This payment cannot be recognized</string>
    <string name="payment_complete">Payment has been completed</string>
    <string name="payment_error">Payment failed or was cancelled</string>
</resources>
