<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/drawer_menu_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ic_menu_ticket"
            android:title="@string/nav_tickets" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/nav_account" />
        <item
            android:id="@+id/nav_pricing"
            android:icon="@drawable/ic_menu_coin"
            android:title="@string/nav_prices" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/nav_help"
            android:checkable="false" />
    </group>

    <group android:id="@+id/drawer_menu_others"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_menu_backup"
            android:title="@string/nav_backup" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings"/>
    </group>

    <group android:id="@+id/drawer_menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:orderInCategory="4"
            android:title="@string/nav_logout" />
    </group>

</menu>
