<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/windowBackground"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/backup_category" />

    <LinearLayout
        android:id="@+id/button_backup_plain"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin"
        android:background="?android:attr/selectableItemBackground" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:text="@string/backup_export_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/backup_export_desc"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_restore_plain"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin"
        android:background="?android:attr/selectableItemBackground" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:text="@string/backup_import_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/backup_import_desc"/>

    </LinearLayout>

</LinearLayout>